--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional CMO and growth executive with an unusual POV. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conferences.</p>
+                <p>I'm a fractional CMO and growth executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. And I operate more like a CFO or COO than a traditional CMO.</p>
 
 <p>I build controllable, predictable systems that do three things:</p>
                 <ul class="bullet-list">
@@ -50,7 +50,7 @@
                     <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
-                <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. Some people call this the "flywheel effect," but that sounds like a consulting cliche to me. Regardless of name, it can create huge cost savings for your business.</p>
+                <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business. I can share anonymized case studies with you offline.</p>
             </div>
         </div>
     </section>
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems, leading to cost savings of 15% or more.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems and leads to substantial cost savings.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strengthen human relationships, not replace them. </p>
                 <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
@@ -102,7 +102,7 @@
             <div class="content-block">
                 <h2>Who I am</h2>
                 <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, lending, and other consumer businesses. I’ve been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
-                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
+                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
                 <p>If you’re trying to build a scalable revenue system for a consumer services or subscription business, please email me to schedule a conversation.</p>
             </div>
         </div>
