--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional CMO and growth executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. And I operate more like a CFO or COO than a traditional CMO.</p>
+                <p>I'm a fractional CMO and growth executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I think more like a CFO or COO than a traditional CMO.</p>
 
 <p>I build controllable, predictable systems that do three things:</p>
                 <ul class="bullet-list">
