--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
-                <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business. I can share anonymized case studies with you offline.</p>
+                <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
+<p>For a medical services provider, a redesigned paid search strategy and landing page to deliver a 30% reduction in CAC. For a legal services marketplace, nurture strategies moved paid media from -20% margins to break-even.</p>
             </div>
         </div>
     </section>
