--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue
 </h1>
-            <p class="hero-subtitle"><strong>Systems-oriented, fractional CMO for consumer service and subscription businesses.</p>
+            <p class="hero-subtitle"><strong>Fractional CMO for consumer service and subscription businesses.</p>
         </div>
     </section>
 
@@ -51,7 +51,7 @@
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
                 <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
-<p>A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created dedicated landing pages that added a human element to the experience. Within two months, CAC had dropped 30%.</p>
+<p>A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created dedicated landing pages that added a human element to the experience. Within three months, CAC had dropped 30% to bring unit economics positive.</p>
             </div>
         </div>
     </section>
