--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h2>Who I am</h2>
                 <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, lending, and other consumer businesses. I’ve been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
                 <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
-                <p>If you’re trying to build a scalable revenue system for a consumer services or subscription business, please email me to schedule a conversation.</p>
+                <p>If you’re trying to build a scalable revenue system for a consumer services or subscription business, please email me to schedule a 15-minute introductory call.</p>
             </div>
         </div>
     </section>
