--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue
 </h1>
-            <p class="hero-subtitle"><strong>Fractional CMO for consumer service and subscription businesses.</p>
+            <p class="hero-subtitle"><strong>Fractional CMO for consumer, financial services and subscription businesses.</p>
         </div>
     </section>
 
