--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
                 <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
-<p>A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</p>
+<p><quote>An example: A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</quote></p>
             </div>
         </div>
     </section>
@@ -103,7 +103,7 @@
             <div class="content-block">
                 <h2>Who I am</h2>
                 <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, lending, and other consumer businesses. I’ve been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
-                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
+                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. My <a href="https://www.linkedin.com/in/recohen" style="color: blue">LinkedIn profile</a> has more details. </p>
                 <p>If you’re trying to build a scalable revenue system for a consumer services or subscription business, please email me to schedule a 15-minute introductory call.</p>
             </div>
         </div>
