--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
                 <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
-<p><quote>An example: A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</quote></p>
+<p><blockquote>An example: A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</blockquote></p>
             </div>
         </div>
     </section>
