--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1">
 </head>
 <body>
 
@@ -31,9 +31,8 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue
-</h1>
-            <p class="hero-subtitle"><strong>Fractional CMO for consumer financial services and subscription businesses.</p>
+            <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue</h1>
+            <p class="hero-subtitle"><strong>Fractional CMO for consumer, financial services and subscription businesses.</strong></p>
         </div>
     </section>
 
@@ -44,14 +43,14 @@
                 <h2>What I do</h2>
                 <p>I'm a fractional CMO and growth executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I think more like a CFO or COO than a traditional CMO.</p>
 
-<p>I build controllable, predictable systems that do three things:</p>
-                <ul class="bullet-list">
+                <p>I build controllable, predictable systems that do three things:</p>
+                <ol class="numbered-list">
                     <li>Increase demand and lead volume with more, tighter marketing</li>
                     <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing customers</li>
-                </ul>
+                </ol>
                 <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
-<p><blockquote>An example: A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</blockquote></p>
+                <blockquote>An example: A medical services provider was spending nearly $2M on paid search but was losing money in a competitive space. Their landing pages were generic and too product focused. I built a new paid search account structure around specific intent signals and created a new landing page experience featuring a human spokesperson and trust-building elements. Within three months, CAC had dropped 30% to bring unit economics positive.</blockquote>
             </div>
         </div>
     </section>
@@ -62,7 +61,7 @@
             <div class="content-block">
                 <h2>Who I help</h2>
                 <p>I work with owners, CEOs, and growth leaders in consumer businesses where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, sales, client operations, product, and/or technology. When that orchestration breaks down, costs climb quickly and performance drops. This includes insurance, wealth, lending, home services, and other high CAC industries.</p>
-           <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least several million dollars annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
+                <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least several million dollars annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
             </div>
         </div>
     </section>
@@ -111,7 +110,6 @@
 </main>
 
 <footer>
-    <div class="container"></div>
     <div class="container">
         <p style="margin: 0; font-size: 0.9rem;">&copy; 2026 Cohen Advisory LLC. All rights reserved.</p>
     </div>
