--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero-section">
         <div class="container">
             <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue</h1>
-            <p class="hero-subtitle"><strong>Fractional CMO for consumer, financial services and subscription businesses.</strong></p>
+            <p class="hero-subtitle"><strong>Fractional CMO for consumer financial services and subscription businesses.</strong></p>
         </div>
     </section>
 
