--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=1">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <p class="hero-tagline">Fractional CMO &bull; Insurance &bull; Lending &bull; High-CAC consumer businesses</p>
+            <p class="hero-tagline">Insurance &bull; Lending &bull; High-CAC consumer businesses</p>
             <h1 class="hero-headline">
                 Lower your customer acquisition costs
                 <span class="hero-headline-sub">without losing revenue</span>
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional CMO and growth executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I think more like a CFO or COO than a traditional CMO.</p>
+                <p>I'm a fractional marketing executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I think more like a CFO or COO than a traditional CMO.</p>
                 <p>I build controllable, predictable systems that do three things:</p>
             </div>
 
@@ -123,10 +123,6 @@
                                 <div class="carousel-metric">
                                     <span class="carousel-metric-value">30%</span>
                                     <span class="carousel-metric-label">Lower CAC</span>
-                                </div>
-                                <div class="carousel-metric">
-                                    <span class="carousel-metric-value">⅓</span>
-                                    <span class="carousel-metric-label">Of total volume</span>
                                 </div>
                                 <div class="carousel-metric">
                                     <span class="carousel-metric-value">3 mo</span>
