--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional marketing executive. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I think more like a CFO or COO than a traditional CMO.</p>
-                <p>I build controllable, predictable systems that do three things:</p>
+
+<p>I work with marketing functions, but I think and act more like a CFO and COO than a CMO.</p>
+
+<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your unit economics work in a repeatable way at scale.</p> 
+
+<p>To do this, I build controllable, predictable systems that do three things:</p>
+
             </div>
 
             <!-- Three-column cards -->
