--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <div class="content-block">
+            <div class="pillars-summary">
                 <p>I treat all three as a single revenue system because improvements in one area carry through and compound in the others. This approach can create huge cost savings for your business.</p>
             </div>
         </div>
