--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div class="who-i-am-layout">
                 <div class="content-block">
                     <h2>Who I am</h2>
-                    <p>I'm Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, lending, and other consumer businesses. I've been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
+                    <p>I'm Ross Cohen, a consumer business executive with repeated P&L ownership across insurance, lending, and home services. I've built and run marketing, analytics, product management, and recruiting teams from one to 40+ people. And I've been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
                     <p>I've led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One.</p>
                     <a href="https://calendar.app.google/HQ8vqJX4E622rzgx5" class="btn btn-primary btn-hero" target="_blank">
                         <svg class="btn-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
