--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="content-block">
                 <h2>What I do</h2>
 
-<p>I work with marketing functions, but I think and act more like a CFO and COO than a CMO.</p>
+<p>I work with marketing functions, but I'm a CFO or COO at heart. It's that unusual point-of-view that helps me deliver unexpected outcomes in competitive spaces.</p>
 
-<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your unit economics work in a repeatable way at scale.</p> 
+<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your creative is or the awards it won. I care about making your unit economics work in a repeatable way at scale.</p>
 
 <p>To do this, I build controllable, predictable systems that do three things:</p>
 
