--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
 
@@ -234,23 +234,23 @@
                 <p><strong>Common signals:</strong></p>
             </div>
             <div class="signals-grid">
-                <div class="signal-card signal-critical">
+                <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
                     <p class="signal-text">Marketing spend is up, but CAC is rising faster than revenue.</p>
                 </div>
-                <div class="signal-card signal-critical">
+                <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
                     <p class="signal-text">Lead volume is down, but your marketing spend hasn't changed.</p>
                 </div>
-                <div class="signal-card signal-warning">
+                <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
                     <p class="signal-text">Growth is inconsistent or unreliable and you can't tell where it's coming from.</p>
                 </div>
-                <div class="signal-card signal-warning">
+                <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
                     <p class="signal-text">Marketing and sales get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</p>
                 </div>
-                <div class="signal-card signal-caution">
+                <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
                     <p class="signal-text">Decisions about growth are being driven by anecdotes rather than evidence.</p>
                 </div>
