--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="content-block">
                 <h2>What I do</h2>
 
-<p>I work with marketing functions, but I'm a CFO or COO at heart. It's that unusual point-of-view that helps me deliver unexpected outcomes in competitive spaces.</p>
+<p>I work with marketing functions, but I'm a CFO or COO at heart. It's that unusual point-of-view that helps me deliver unexpected outcomes.</p>
 
-<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your creative is or the awards it won. I care about making your unit economics work in a repeatable way at scale.</p>
+<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your creative is or the awards it won. I care about two things: (1) whether your unit economics work in a repeatable way at scale and (2) whether you're efficient enough to win in competitive marketplaces.</p>
 
-<p>To do this, I build controllable, predictable systems that do three things:</p>
+<p>I build controllable, predictable systems that do three things:</p>
 
             </div>
 
@@ -242,6 +242,10 @@
                 </div>
                 <div class="signal-card signal-branded">
                     <div class="signal-checkbox"></div>
+                    <p class="signal-text">Your marketing and sales process is manual, inconsistent, and inefficient, but you don't know where to start streamlining it.</p>
+                </div>
+                <div class="signal-card signal-branded">
+                    <div class="signal-checkbox"></div>
                     <p class="signal-text">Decisions about growth are being driven by anecdotes rather than evidence.</p>
                 </div>
             </div>
@@ -278,7 +282,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems and leads to substantial cost savings.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. I use GenAI and Agentic AI heavily in my own work and can help deploy them for you in the right use cases. This approach fixes growth problems and leads to substantial cost savings.</p>
             </div>
 
             <!-- Three-step timeline -->
