--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
 
 <p>I work with marketing functions, but I'm a CFO or COO at heart. It's that unusual point-of-view that helps me deliver unexpected outcomes.</p>
 
-<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your creative is or the awards it won. I care about two things: (1) whether your unit economics work in a repeatable way at scale and (2) whether you're efficient enough to win in competitive marketplaces.</p>
+<p>My obsession is delivering marketing ROI and building reliable systems as a pathway to growth. I'm not interested in how clever your creative is or the awards it won. I care about two things:</p>
+
+<div class="styled-list">
+    <div class="styled-list-item">
+        <span class="styled-list-num">1</span>
+        <p>Whether your unit economics work in a repeatable way at scale.</p>
+    </div>
+    <div class="styled-list-item">
+        <span class="styled-list-num">2</span>
+        <p>Whether you're efficient enough to win in competitive marketplaces.</p>
+    </div>
+</div>
 
 <p>I build controllable, predictable systems that do three things:</p>
 
