--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
 <div class="styled-list">
     <div class="styled-list-item">
         <span class="styled-list-num">1</span>
-        <p>Whether your unit economics work in a repeatable way at scale.</p>
+        <p>Do your unit economics work in a repeatable way at scale?</p>
     </div>
     <div class="styled-list-item">
         <span class="styled-list-num">2</span>
-        <p>Whether you're efficient enough to win in competitive marketplaces.</p>
+        <p>Are you efficient enough to win in competitive marketplaces?</p>
     </div>
 </div>
 
-<p>I build controllable, predictable systems that do three things:</p>
+<p>I build controllable, predictable systems to address these problems that do three things:</p>
 
             </div>
 
