--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="content-block">
                 <h2>What I do</h2>
 
-<p>In competitive markets, it’s a constant race to win and keep market share. The businesses that most efficiently attract, convert, and monetize demand will win at new customer acquisition. They will grow, others will tread water or shrink (often without even knowing why).</p>
+<p>In competitive markets, it’s a constant race to win and keep market share. The businesses that most efficiently attract, convert, and monetize demand will win at new customer acquisition. They will grow, while others tread water or shrink (often without even knowing why).</p>
 
-<p>My mission is to make you be one of the winners. I focus on delivering customer acquisition ROI and building reliable systems as a pathway to growth. I work with marketing and sales functions, but think and act more like a CFO or COO. I focus on two things:</p>
+<p>My mission is to make you one of the winners. I focus on delivering customer acquisition ROI and building reliable systems as a pathway to growth. I work with marketing and sales functions, but think and act more like a CFO or COO. I focus on two things:</p>
 
 <div class="styled-list">
     <div class="styled-list-item">
