--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 <header class="site-header">
     <div class="container header-inner">
         <a href="#" class="brand">Cohen Advisory</a>
-<button class="btn btn-primary" onclick="document.getElementById('contact-modal').classList.add('active')">Contact me</button>
+        <nav class="site-nav">
+            <ul class="nav-list">
+                <li><a href="#what-i-do">What I do</a></li>
+                <li><a href="#results">How it looks</a></li>
+                <li><a href="#when-to-call-me">When to call me</a></li>
+                <li><a href="#who-i-help">Who I help</a></li>
+                <li><a href="#how-i-work">How I work</a></li>
+                <li><a href="#who-i-am">Who I am</a></li>
+            </ul>
+        </nav>
+        <button class="btn btn-primary" onclick="document.getElementById('contact-modal').classList.add('active')">Contact me</button>
     </div>
 </header>
 
